# yaboc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
assets/data/levels/: level_01.txt
assets/data/sprites/: sprite_sheet.json
assets/shaders/: sprite.frag.glsl  sprite.vert.glsl
include/yaboc/: shader.h  sprite_renderer.h  sprite_sheet.h
include/yaboc/ecs/components/: all.h  tags.h
include/yaboc/ecs/systems/: sprite_render_system.h
include/yaboc/graphics/: shader.h
include/yaboc/platform/: sdl_context.h  sdl_gl_window.h
include/yaboc/sprite/: sprite_renderer.h  sprite_sheet.h
src/: main.cpp  shader.cpp  sprite_renderer.cpp  sprite_sheet.cpp
src/yaboc/ecs/systems/: sprite_render_system.cpp
src/yaboc/graphics/: shader.cpp
src/yaboc/platform/: sdl_context.cpp  sdl_gl_window.cpp
src/yaboc/sprite/: sprite_renderer.cpp  sprite_sheet.cpp
tools/cmake/: CompilerConfig.cmake  Dependencies.cmake  StageConfig.cmake
tools/cmake/presets/: base.json  build_types.json  compilers.json  generators.json  platforms.json
